--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,6 @@ display:grid;
 grid-template-columns:repeat(2,200px);	
 grid-template-rows:repeat(2,200px);
 }
-.item{
+/* .item{
 	border:1px solid black;
-}
+} */
