--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@
 display:grid;
 grid-template-columns:repeat(2,200px);	
 grid-template-rows:repeat(2,200px);
-/* 	width:200px;
-	height:200px; */
+	width:200px;
+	height:200px;
 	
 }
 .item{
