--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,8 @@ grid-template-rows:repeat(2,200px);
 	height:200px;
 	
 }
-.item{
-	border:1px solid black;
+/* .item{
+	border:1px solid black; */
 }
 /* .item{
 	border:1px solid black;
