--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
-.holder { 
-    display: grid; 
-    grid-template-rows: repeat(2, 200px); 
-	grid-template-columns: repeat(2, 200px); 
-    width: 200px; 
-    height: 200px;
+/* Your CSS Code here. */
+.holder{
+	display: grid;
+	grid-template-rows: repeat(2, 200px);
+	grid-template-columns: repeat(2,200px);
 }
 
-/* Your CSS Code here. */
+#box{
+	border:1px black solid ;
+}
