--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,13 @@
 /* Your CSS Code here. */
 .holder{
-	display: grid;
-	grid-template-rows: repeat(2, 200px);
-	grid-template-columns: repeat(2,200px);
+	 display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  width: 200px;
+  height: 200px;
+  border: 1px solid #000;
 }
 
-/* #box{
+#box{
 	border:1px black solid ;
-} */
+}
